<resources>
    <string name="app_name">iQsTracker</string>
    <string name="title_home">Home</string>
    <string name="title_status">Status</string>
    <string name="title_organizations">Organizations</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_about">About</string>
    <string name="title_add_organization">Register tracker</string>
    <string name="title_organization_details">Organization details</string>
    <string name="action_home">Home</string>
    <string name="action_status">Status</string>
    <string name="action_organizations">Organizations</string>
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="title_family">iQuipsys Positron</string>
    <string name="title_product">Phone Tracker v%1$s</string>
    <string name="title_app">iQuipsys Phone Tracker</string>
    <string name="status_disabled">Tracker is turned off</string>
    <string name="status_enabled">Tracker is turned on</string>
    <string name="status_no_location">Waiting for position&#8230;</string>
    <string name="status_offsite">Location is outside of organizations</string>
    <string name="status_no_network">Waiting for network&#8230;</string>
    <string name="status_error">Error</string>
    <string name="status_connected_gps">Sending data to %s</string>
    <string name="status_connected_beacon">Sending data with beacons</string>
    <string name="signal_none">No signal</string>
    <string name="signal_attention">Attention</string>
    <string name="signal_confirm">Confirmation</string>
    <string name="signal_warning">Warning</string>
    <string name="signal_emergency">Emergency</string>
    <string name="press_none">No press</string>
    <string name="press_long">Long press</string>
    <string name="press_short">Short press</string>
    <string name="mobility_mobile">Mobile</string>
    <string name="mobility_freezed">freezed</string>
    <string name="hint_emergency">Press the button to stop emergency signal</string>
    <string name="hint_press">Click the button to send short or long press</string>
    <string name="description_signal">Sending short or long button press</string>
    <string name="description_power">Turning tracker on or off</string>
    <string name="welcome">Welcome</string>
    <string name="to_title_family">to iQuipsys Positron</string>
    <string name="description_about">This application turns your smartphone into a tracker device that transmits position and status to iQuipsys Positron system.</string>
    <string name="hint_register_organization">To start register this tracker in a work organization</string>
    <string name="button_register_organization">Register in organization</string>
    <string name="description_inquery">For any inquiries regarding this application please contact:</string>
    <string name="label_weborganization">Weborganization: </string>
    <string name="contact_weborganization">www.iquipsys.com</string>
    <string name="label_email">Email: </string>
    <string name="contact_email">info@iquipsys.com</string>
    <string name="label_phone">Phone: </string>
    <string name="contact_phone">+1&#8211;234&#8211;5677890</string>
    <string name="hint_active_interval">Active:</string>
    <string name="hint_inactive_interval">Inactive:</string>
    <string name="hint_offsite_interval">Offorganization:</string>
    <string name="button_restore_defaults">Restore defaults</string>
    <string name="option_statistics_day">For last day</string>
    <string name="option_statistics_week">For last week</string>
    <string name="option_statistics_month">For last month</string>
    <string name="option_statistics_year">For last year</string>
    <string name="option_statistics_total">Total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_server_url">Server URL</string>
    <string name="hint_broker_url">MQTT broker URL</string>
    <string name="hint_tracker_udi">Tracker ID (Phone number)</string>
    <string name="hint_organization_params">Use workorganization parameters</string>
    <string name="hint_use_mqtt">Use MQTT broker</string>
    <string name="hint_use_beacons">Use beacons</string>
    <string name="hint_use_altpos">Use alt. positioning</string>
    <string name="hint_organizations_empty">This tracker is not registered on any organization yet</string>
    <string name="label_organization">Work organization:</string>
    <string name="label_error">Error: </string>
    <string name="label_last_update">Last update:</string>
    <string name="label_long">Longitude:</string>
    <string name="label_lat">Latitude:</string>
    <string name="label_alt">Altitude (m):</string>
    <string name="label_speed">Speed (km/h):</string>
    <string name="label_angle">Angle (deg):</string>
    <string name="label_mobility">Mobility:</string>
    <string name="label_beacons">Beacons:</string>
    <string name="description_add_organization">To register this tracker on a new organization get from administrator a unique organization code and enter it here.</string>
    <string name="hint_organization_code">Organization code</string>
    <string name="label_radius">Radius (m): </string>
    <string name="label_active_interval">Active:</string>
    <string name="label_inactive_interval">Inactive:</string>
    <string name="label_offsite_interval">Offorganization:</string>
    <string name="loading">Loading</string>
    <string name="error_no_udi">Tracker UDI is not set</string>
    <string name="error_no_rest_uri">REST server URI is not set</string>
    <string name="error_no_mqtt_uri">MQTT broker URI is not set</string>
    <string name="error_no_network">Network is not available</string>
    <string name="error_no_connection">Not connected to the server</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_organization_not_found">Organization was not found</string>
    <string name="error_organization_save_failure">Saving organization failed</string>
    <string name="confirm_organization_remove">Remove organization registration?</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="sent_long_press">Sent long press signal</string>
    <string name="sent_short_press">Sent short press signal</string>
    <string name="turn_on_tracker">Turn on the tracker</string>
    <string name="received_signal_attention">Received attention signal</string>
    <string name="received_signal_confirm">Received confirmation signal</string>
    <string name="received_signal_warning">Received warning signal</string>
    <string name="received_signal_emergency">Received emergency signal</string>
    <string name="tracker_id_missing_title">Tracker ID is missing</string>
    <string name="tracker_id_missing_text">Your phone number is used as your Tracker ID and we cannot get it automatically from your phone settings. Please enter it manually in Settings in the standard format: \n +[country code][area code][phone number]</string>
    <string name="tracker_id_missing_button">Settings</string>
    <string name="settings_edit_phone_udi_btn">Edit</string>
    <string name="geolocation_disabled_title">Geolocation is disabled</string>
    <string name="geolocation_disabled_text">Access to GPS data on your phone is currently disabled. Please use location settings to enable it in order to utilize iQuipsys Phone Tracker.</string>
    <string name="geolocation_disabled_button">Location settings</string>
    <string name="bluetooth_disabled_title">Bluetooth is disabled</string>
    <string name="bluetooth_disabled_text">Please enable bluetooth to use beacons functionality of your iQuipsys Phone Tracker.</string>
    <string name="bluetooth_disabled_button">Enable bluetooth</string>
    <string name="interval_textview">Interval (sec):</string>
</resources>