<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.iquipsys.tracker.phone.settings.SettingsFragment">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settingsUdiTextInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tracker_udi"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/enablePhoneEditTextButton"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_edit_black_24dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsServerTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_server_url"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/enableServerEditTextButton"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsBrokerTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_broker_url"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/enableBrockerEditTextButton"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

    </LinearLayout>

        <Switch
            android:id="@+id/settingsUseMqttSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hint_use_mqtt" />

        <Switch
            android:id="@+id/settingsUseBeaconsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hint_use_beacons" />

        <Switch
            android:id="@+id/settingsUseAltPositioningSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hint_use_altpos" />

        <Switch
            android:id="@+id/settingsOrganizationParamsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hint_organization_params" />

        <TextView
            android:id="@+id/intervalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/interval_textview" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsActiveIntervalTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_active_interval"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsInactiveIntervalTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_inactive_interval"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settingsOfforganizationIntervalTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_offsite_interval"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/settingsRestoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_restore_defaults"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="?android:attr/colorForegroundInverse" />

    </LinearLayout>

</ScrollView>

