<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iquipsys.tracker.phone.organizations.OrganizationsDetailsFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_organization"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/detailsOrganizationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_long"
            android:layout_column="0"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/detailsLngTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_lat"
            android:layout_column="0"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/detailsLatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_radius"
            android:layout_column="0"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/detailsRadiusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/intervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_textview"
            android:layout_column="0"
            android:layout_row="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_active_interval"
            android:layout_column="0"
            android:layout_row="5"/>

        <TextView
            android:id="@+id/detailsActiveIntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_inactive_interval"
            android:layout_column="0"
            android:layout_row="6"/>

        <TextView
            android:id="@+id/detailsInactiveIntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_offsite_interval"
            android:layout_column="0"
            android:layout_row="7"/>

        <TextView
            android:id="@+id/detailsOfforganizationIntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_column="1"
            android:layout_row="7"
            android:layout_columnWeight="1"/>

    </GridLayout>

    <fragment
        android:id="@+id/detailsMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
