<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.iquipsys.tracker.phone.organizations.OrganizationsAddFragment">

    <ProgressBar
        android:id="@+id/addOrganizationsProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="-6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_add_organization"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"/>

        <TextView
            style="@style/TextAppearance.Design.Error"
            android:id="@+id/addOrganizationsErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addOrganizationCodeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_organization_code"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addOrganizationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/button_register_organization"
            android:textColor="?android:attr/colorForegroundInverse" />

    </LinearLayout>

</LinearLayout>
